* Add initial assets * Configure simple build approach

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-helo
+<html>
+<head>
+    <script src="//unpkg.com/alpinejs" defer></script>
+</head>
+<body>
+<script src="build/js/blue-and-green.js"></script>
+</body>
+</html>
